[Fix] -> Comment section right left padding reduced tp 10px from 20px for full width stretched layout.

--- a/assets/css/unminified/skin-1-rtl.css
+++ b/assets/css/unminified/skin-1-rtl.css
@@ -459,7 +459,7 @@
 }
 
 .ast-page-builder-template .comments-area {
-  padding: 3em 1.3em 0em 1.3em;
+  padding: 3em 0em 0em 0em;
 }
 
 @media (max-width: 544px) {
