--- a/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
@@ -334,7 +334,7 @@
 
 .ast-page-builder-template {
     .comments-area {
-        padding: 3em 1.3em 0em 1.3em;
+        padding: 3em 0em 0em 0em;
     }
     @media (max-width: $mx-col-sm) {
         .comments-area {
